// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFromSchema invalid schema item Render 1`] = `
Object {
  "asFragment": <DocumentFragment>
    <form>
      <div>
        Type not supported. name: , schema.type: someNewYupType
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Save
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </form>
  </DocumentFragment>,
  "onSubmitCalls": Array [
    Array [
      undefined,
      "[object Event]",
      2,
    ],
  ],
}
`;

exports[`FormFromSchema schema1 Render with user == null 1`] = `
Object {
  "asFragment": <DocumentFragment>
    <form>
      <ul
        class="MuiList-root fullWidth"
      >
        <div
          class="MuiBox-root MuiBox-root-54"
        >
          <div
            class="MuiBox-root MuiBox-root-55"
          >
            <ul
              class="MuiList-root fullWidth MuiList-subheader"
            >
              <li
                class="MuiListSubheader-root"
              >
                user
              </li>
              <div
                class="MuiBox-root MuiBox-root-56"
              >
                <div
                  class="MuiBox-root MuiBox-root-57"
                >
                  <div
                    class="MuiBox-root MuiBox-root-58"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                      >
                        firstName
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          name="user.firstName"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-59"
                >
                  <div
                    class="MuiBox-root MuiBox-root-60"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                      >
                        age
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          name="user.age"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-61"
                >
                  <div
                    class="MuiBox-root MuiBox-root-62"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                      >
                        dob
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                          name="user.dob"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                                />
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-63"
                >
                  <ul
                    class="MuiList-root fullWidth MuiList-dense MuiList-subheader"
                  >
                    <li
                      class="MuiListSubheader-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
                      >
                        <div
                          class="MuiGrid-root"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            animal
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root"
                        >
                          <div
                            class="MuiBox-root MuiBox-root-64"
                          >
                            <button
                              class="MuiButtonBase-root MuiIconButton-root addListItem"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-65"
                >
                  <div
                    class="MuiBox-root MuiBox-root-66"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-67 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input-70"
                            data-indeterminate="false"
                            name="user.hasGlasses"
                            type="checkbox"
                            value="true"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      >
                        hasGlasses
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-71"
                >
                  <div
                    class="MuiBox-root MuiBox-root-72"
                  >
                    <div
                      aria-expanded="false"
                      class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                      label="country"
                      name="user.country"
                      role="combobox"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-invalid="false"
                            autocapitalize="none"
                            autocomplete="off"
                            class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                            id="mui-84491"
                            name="user.country"
                            spellcheck="false"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiAutocomplete-endAdornment"
                          >
                            <button
                              aria-label="Clear"
                              class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                              tabindex="-1"
                              title="Clear"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <button
                              aria-label="Open"
                              class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                              tabindex="-1"
                              title="Open"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M7 10l5 5 5-5z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </ul>
          </div>
        </div>
      </ul>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Save
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </form>
  </DocumentFragment>,
  "onSubmitCalls": Array [
    Array [
      Object {
        "user": Object {
          "age": 0,
          "animal": Array [],
          "country": "",
          "dob": "",
          "firstName": "",
          "hasGlasses": false,
        },
      },
      "[object Event]",
      2,
    ],
  ],
}
`;

exports[`FormFromSchema schema1 Render with values 1`] = `
Object {
  "asFragment": <DocumentFragment>
    <form>
      <ul
        class="MuiList-root fullWidth"
      >
        <div
          class="MuiBox-root MuiBox-root-1"
        >
          <div
            class="MuiBox-root MuiBox-root-2"
          >
            <ul
              class="MuiList-root fullWidth MuiList-subheader"
            >
              <li
                class="MuiListSubheader-root"
              >
                user
              </li>
              <div
                class="MuiBox-root MuiBox-root-3"
              >
                <div
                  class="MuiBox-root MuiBox-root-4"
                >
                  <div
                    class="MuiBox-root MuiBox-root-5"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                        data-shrink="true"
                      >
                        firstName
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          name="user.firstName"
                          type="text"
                          value="John"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-6"
                >
                  <div
                    class="MuiBox-root MuiBox-root-7"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                        data-shrink="true"
                      >
                        age
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          name="user.age"
                          type="number"
                          value="28"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-8"
                >
                  <div
                    class="MuiBox-root MuiBox-root-9"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                        data-shrink="true"
                      >
                        dob
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                          name="user.dob"
                          type="text"
                          value="01/01/1970"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                                />
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-10"
                >
                  <ul
                    class="MuiList-root fullWidth MuiList-dense MuiList-subheader"
                  >
                    <li
                      class="MuiListSubheader-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
                      >
                        <div
                          class="MuiGrid-root"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            animal
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root"
                        >
                          <div
                            class="MuiBox-root MuiBox-root-11"
                          >
                            <button
                              class="MuiButtonBase-root MuiIconButton-root addListItem"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                    <div>
                      <div>
                        <li
                          class="MuiListItem-root MuiListItem-dense"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root drag-handle"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M20 9H4v2h16V9zM4 15h16v-2H4v2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <ul
                            class="MuiList-root fullWidth"
                          >
                            <div
                              class="MuiBox-root MuiBox-root-30"
                            >
                              <div
                                class="MuiBox-root MuiBox-root-31"
                              >
                                <div
                                  class="MuiBox-root MuiBox-root-32"
                                >
                                  <div
                                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                                  >
                                    <label
                                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                      data-shrink="true"
                                    >
                                      name
                                    </label>
                                    <div
                                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                    >
                                      <input
                                        aria-invalid="false"
                                        class="MuiInputBase-input MuiInput-input"
                                        name="user.animal.0.name"
                                        type="text"
                                        value=""
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiBox-root MuiBox-root-33"
                              >
                                <div
                                  class="MuiBox-root MuiBox-root-34"
                                >
                                  <div
                                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                                  >
                                    <label
                                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                      data-shrink="true"
                                    >
                                      legs
                                    </label>
                                    <div
                                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                    >
                                      <input
                                        aria-invalid="false"
                                        class="MuiInputBase-input MuiInput-input"
                                        name="user.animal.0.legs"
                                        type="number"
                                        value=""
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </ul>
                          <button
                            class="MuiButtonBase-root MuiIconButton-root deleteListItem"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </li>
                      </div>
                      <div>
                        <hr
                          class="MuiDivider-root"
                        />
                        <li
                          class="MuiListItem-root MuiListItem-dense"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root drag-handle"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M20 9H4v2h16V9zM4 15h16v-2H4v2z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                          <ul
                            class="MuiList-root fullWidth"
                          >
                            <div
                              class="MuiBox-root MuiBox-root-17"
                            >
                              <div
                                class="MuiBox-root MuiBox-root-18"
                              >
                                <div
                                  class="MuiBox-root MuiBox-root-19"
                                >
                                  <div
                                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                                  >
                                    <label
                                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                      data-shrink="true"
                                    >
                                      name
                                    </label>
                                    <div
                                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                    >
                                      <input
                                        aria-invalid="false"
                                        class="MuiInputBase-input MuiInput-input"
                                        name="user.animal.1.name"
                                        type="text"
                                        value="Coco birdie"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="MuiBox-root MuiBox-root-20"
                              >
                                <div
                                  class="MuiBox-root MuiBox-root-21"
                                >
                                  <div
                                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                                  >
                                    <label
                                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                                      data-shrink="true"
                                    >
                                      legs
                                    </label>
                                    <div
                                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                                    >
                                      <input
                                        aria-invalid="false"
                                        class="MuiInputBase-input MuiInput-input"
                                        name="user.animal.1.legs"
                                        type="number"
                                        value="2"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </ul>
                          <button
                            class="MuiButtonBase-root MuiIconButton-root deleteListItem"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </li>
                      </div>
                    </div>
                  </ul>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-22"
                >
                  <div
                    class="MuiBox-root MuiBox-root-23"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-24 MuiCheckbox-root MuiCheckbox-colorSecondary PrivateSwitchBase-checked-25 Mui-checked MuiIconButton-colorSecondary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input-27"
                            data-indeterminate="false"
                            name="user.hasGlasses"
                            type="checkbox"
                            value="true"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      >
                        hasGlasses
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-28"
                >
                  <div
                    class="MuiBox-root MuiBox-root-29"
                  >
                    <div
                      aria-expanded="false"
                      class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                      label="country"
                      name="user.country"
                      role="combobox"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-invalid="false"
                            autocapitalize="none"
                            autocomplete="off"
                            class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                            id="mui-17986"
                            name="user.country"
                            spellcheck="false"
                            type="text"
                            value="Belgium"
                          />
                          <div
                            class="MuiAutocomplete-endAdornment"
                          >
                            <button
                              aria-label="Clear"
                              class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator MuiAutocomplete-clearIndicatorDirty"
                              tabindex="-1"
                              title="Clear"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <button
                              aria-label="Open"
                              class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                              tabindex="-1"
                              title="Open"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M7 10l5 5 5-5z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </ul>
          </div>
        </div>
      </ul>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Save
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </form>
  </DocumentFragment>,
  "onSubmitCalls": Array [
    Array [
      Object {
        "user": Object {
          "age": 28,
          "animal": Array [
            Object {
              "legs": 4,
              "name": "Kitty cat",
            },
            Object {
              "legs": 2,
              "name": "Coco birdie",
            },
          ],
          "country": "Belgium",
          "dob": "01/01/1970",
          "firstName": "John",
          "hasGlasses": true,
        },
      },
      "[object Event]",
      2,
    ],
  ],
}
`;

exports[`FormFromSchema schema1 Render without values 1`] = `
Object {
  "asFragment": <DocumentFragment>
    <form>
      <ul
        class="MuiList-root fullWidth"
      >
        <div
          class="MuiBox-root MuiBox-root-35"
        >
          <div
            class="MuiBox-root MuiBox-root-36"
          >
            <ul
              class="MuiList-root fullWidth MuiList-subheader"
            >
              <li
                class="MuiListSubheader-root"
              >
                user
              </li>
              <div
                class="MuiBox-root MuiBox-root-37"
              >
                <div
                  class="MuiBox-root MuiBox-root-38"
                >
                  <div
                    class="MuiBox-root MuiBox-root-39"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                      >
                        firstName
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          name="user.firstName"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-40"
                >
                  <div
                    class="MuiBox-root MuiBox-root-41"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                        data-shrink="false"
                      >
                        age
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          name="user.age"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-42"
                >
                  <div
                    class="MuiBox-root MuiBox-root-43"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-filled"
                        data-shrink="true"
                      >
                        dob
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                          name="user.dob"
                          type="text"
                          value="01/01/2020"
                        />
                        <div
                          class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                        >
                          <button
                            class="MuiButtonBase-root MuiIconButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                                />
                                <path
                                  d="M0 0h24v24H0z"
                                  fill="none"
                                />
                              </svg>
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-44"
                >
                  <ul
                    class="MuiList-root fullWidth MuiList-dense MuiList-subheader"
                  >
                    <li
                      class="MuiListSubheader-root"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
                      >
                        <div
                          class="MuiGrid-root"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            animal
                          </p>
                        </div>
                        <div
                          class="MuiGrid-root"
                        >
                          <div
                            class="MuiBox-root MuiBox-root-45"
                          >
                            <button
                              class="MuiButtonBase-root MuiIconButton-root addListItem"
                              tabindex="0"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-46"
                >
                  <div
                    class="MuiBox-root MuiBox-root-47"
                  >
                    <label
                      class="MuiFormControlLabel-root"
                    >
                      <span
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-48 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <input
                            class="PrivateSwitchBase-input-51"
                            data-indeterminate="false"
                            name="user.hasGlasses"
                            type="checkbox"
                            value="true"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </span>
                      <span
                        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                      >
                        hasGlasses
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="MuiBox-root MuiBox-root-52"
                >
                  <div
                    class="MuiBox-root MuiBox-root-53"
                  >
                    <div
                      aria-expanded="false"
                      class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasClearIcon MuiAutocomplete-hasPopupIcon"
                      label="country"
                      name="user.country"
                      role="combobox"
                    >
                      <div
                        class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-invalid="false"
                            autocapitalize="none"
                            autocomplete="off"
                            class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                            id="mui-79800"
                            name="user.country"
                            spellcheck="false"
                            type="text"
                            value=""
                          />
                          <div
                            class="MuiAutocomplete-endAdornment"
                          >
                            <button
                              aria-label="Clear"
                              class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-clearIndicator"
                              tabindex="-1"
                              title="Clear"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                            <button
                              aria-label="Open"
                              class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                              tabindex="-1"
                              title="Open"
                              type="button"
                            >
                              <span
                                class="MuiIconButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M7 10l5 5 5-5z"
                                  />
                                </svg>
                              </span>
                              <span
                                class="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </ul>
          </div>
        </div>
      </ul>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label"
        >
          Save
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </form>
  </DocumentFragment>,
  "onSubmitCalls": Array [
    Array [
      Object {
        "user": Object {
          "age": 0,
          "animal": Array [],
          "country": "",
          "dob": "01/01/2020",
          "firstName": "",
          "hasGlasses": false,
        },
      },
      "[object Event]",
      2,
    ],
  ],
}
`;
